--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # --------------------------
 title: ruialexrib                          # the main title
 
-tagline: A text-focused Jekyll theme.  # it will display as the sub-title
+tagline: Sistemas de Informação.  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
   A minimal, portfolio, sidebar,
